--- a/style.css
+++ b/style.css
@@ -7,4 +7,23 @@ section {
   position: absolute;
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #ff4f8b, #dff1ff);
+}
+section .color {
+  position: absolute;
+}
+section .color:nth-child(1) {
+  background: #ff359b;
+  width: 600px;
+  height: 600px;
+  top: -350px;
+}
+section .color:nth-child(2) {
+  background: #00d2ff;
+  width: 600px;
+  height: 600px;
+  top: -350px;
 }
