--- a/style.css
+++ b/style.css
@@ -23,7 +23,15 @@ section .color:nth-child(1) {
 }
 section .color:nth-child(2) {
   background: #00d2ff;
-  width: 600px;
-  height: 600px;
-  top: -350px;
+  width: 500px;
+  height: 500px;
+  top: -150px;
+  left: 100px;
+}
+section .color:nth-child(3) {
+  background: #fffd87;
+  width: 300px;
+  height: 300px;
+  top: 50px;
+  right: 0px;
 }
